gccida/g0/count_or_remove_death_notes
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/count_or_remove_death_notes/src/flow.c:4739:11: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
else if ( mode_class_0[*( ( unsigned __int8 *)reg + 2)] == MODE_COMPLEX_INT 
          ^~~~~~~~~~~~
          mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/count_or_remove_death_notes/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/count_or_remove_death_notes/src/flow.c:4740:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[*( ( unsigned __int8 *)reg + 2)] == MODE_COMPLEX_FLOAT ) 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/count_or_remove_death_notes/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/count_or_remove_death_notes/src/flow.c:4761:14: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
link = ( rtx)link[1]; 
             ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/count_or_remove_death_notes/src/flow.c:4768:14: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
next = ( rtx)link[1]; 
             ^~~~~~~
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/count_or_remove_death_notes/src/obj/flow.o] Error 1
